--- a/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
+++ b/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
@@ -1,5 +1,8 @@
 server {
+    <% if not node['sklad1']['magento']['is_prod_hidden'] -%>
     server_name shop.sklad1.bg;
+    <% end -%>
+    server_name porto-live.sklad1.bg shop-admin.sklad1.bg;
 
     client_max_body_size 2M;
 
@@ -17,13 +20,16 @@ server {
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-        proxy_pass http://shop.sklad1.bg:32770;
+        proxy_pass http://porto-live.sklad1.bg:32770;
      }
 
 }
 
 server {
-    server_name porto.sklad1.bg;
+    <% if node['sklad1']['magento']['is_prod_hidden'] -%>
+    server_name shop.sklad1.bg
+    <% end -%>
+    server_name porto.sklad1.bg porto-admin.sklad1.bg;
 
     client_max_body_size 2M;
 
