--- a/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
+++ b/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
@@ -147,3 +147,27 @@ server {
     }
 
 }
+
+server {
+    server_name ultimo.sklad1.bg;
+
+    client_max_body_size 2M;
+
+    location ^~ /admin_ {
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header   Host             $host;
+
+        proxy_pass http://localhost:32778;
+     }
+
+     location / {
+        access_log off;
+
+        proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+        proxy_pass http://ultimo.sklad1.bg:32778;
+     }
+
+}
