--- a/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
+++ b/cookbooks/sklad1/templates/default/proxy/magento.conf.erb
@@ -26,7 +26,7 @@ server {
         <% if node['sklad1']['magento']['is_prod_hidden'] -%>
         proxy_pass http://porto-live.sklad1.bg:32770;
         <% else -%>
-        proxy_pass http://localhost:32770;
+        proxy_pass http://shop.sklad1.bg:32770;
         <% end -%>
      }
 
@@ -77,7 +77,7 @@ server {
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-        proxy_pass http://localhost:32774;
+        proxy_pass http://porto.sklad1.bg:32774;
      }
 
      location /static/ {
@@ -167,7 +167,7 @@ server {
         proxy_set_header   X-Real-IP        $remote_addr;
         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-        proxy_pass http://localhost:32778;
+        proxy_pass http://ultimo.sklad1.bg:32778;
      }
 
 }
