--- a/cookbooks/inniti/templates/ipsec/ipsec.conf.erb
+++ b/cookbooks/inniti/templates/ipsec/ipsec.conf.erb
@@ -41,4 +41,6 @@ conn azure
       rightid=%<%= @vpn_server %>
       rightsubnet=0.0.0.0/0
       leftsourceip=%config
-      auto=add
+      auto=start
+      dpdaction=hold
+      closeaction=hold
