db_slave replace binlog_db with replicate-do-db.

--- a/cookbooks/inniti/templates/db_slave/slave.cnf.erb
+++ b/cookbooks/inniti/templates/db_slave/slave.cnf.erb
@@ -2,4 +2,4 @@
 server_id = <%= @server_id %>
 relay-log               = /var/log/mysql/mysql-relay-bin.log
 log_bin                 = /var/log/mysql/mysql-bin.log
-binlog_do_db            = inniti
+replicate-do-db         = inniti
