vpn fixed connection.

--- a/cookbooks/inniti/templates/ipsec/ipsec.conf.erb
+++ b/cookbooks/inniti/templates/ipsec/ipsec.conf.erb
@@ -42,5 +42,4 @@ conn azure
       rightsubnet=0.0.0.0/0
       leftsourceip=%config
       auto=start
-      dpdaction=hold
-      closeaction=hold
+      dpdaction=restart
