global-db remove latest pulse.

--- a/cookbooks/inniti/templates/db_slave/column_reorder.sql.erb
+++ b/cookbooks/inniti/templates/db_slave/column_reorder.sql.erb
@@ -1,3 +1,4 @@
 ALTER TABLE `inniti`.`units`
 CHANGE COLUMN `display_name` `display_name` VARCHAR(255) NULL DEFAULT NULL AFTER `updated_at`,
-CHANGE COLUMN `state` `state` TINYINT(1) NOT NULL AFTER `display_name`;
+CHANGE COLUMN `state` `state` TINYINT(1) NOT NULL AFTER `updated_at`,
+CHANGE COLUMN `latest_pulse` `latest_pulse` DATETIME NULL DEFAULT NULL AFTER `updated_at`;
