global-db fixed error in sql.

--- a/cookbooks/inniti/templates/db_master/post_import.sql.erb
+++ b/cookbooks/inniti/templates/db_master/post_import.sql.erb
@@ -1,6 +1,6 @@
 ALTER TABLE `units`
 DROP COLUMN `display_name`,
 DROP COLUMN `updated_at`,
-DROP COLUMN `latest_pulse`
+DROP COLUMN `latest_pulse`,
 DROP COLUMN `state`;
   
